--- a/frontend/src/css/HeroSection.css
+++ b/frontend/src/css/HeroSection.css
@@ -51,6 +51,7 @@
     text-align: center;
     max-width: 800px;
     z-index: 2;
+    margin-right: 60px;
   }
   
   .hero-title {
@@ -65,6 +66,8 @@
     font-size: 1.5rem;
     margin-bottom: 2.5rem;
     color: var(--primary-dark);
+    margin: 0 auto; /* Centrado */
+    margin-bottom: 40px;
   }
   
   .hero-buttons {
@@ -237,6 +240,9 @@
   
     .carousel-control.next {
       right: 10px;
+    }
+    .hero-content {
+      margin-right: 30px;
     }
   }
   
