--- a/frontend/src/css/ReprogramarConsulta.css
+++ b/frontend/src/css/ReprogramarConsulta.css
@@ -94,7 +94,7 @@
 
 h3{
     text-align: center;
-    color: #392682;
+    color: #5a9c5c;
     font-size: 25px;
 }
 
@@ -418,6 +418,7 @@ h2{
     color: rgb(35, 35, 35);
     border: none;
     padding: 8px 12px;
+    max-width: 0px;
     border-radius: 6px;
     margin-top: 15px;
     margin-bottom: 15px;
