--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -123,6 +123,28 @@ footer {
   margin-top: 15px;
 }
 
+.form-group-modalidad {
+  display: flex;
+  flex-direction: column; /* Pone los elementos en columna */
+  align-items: start; /* Alinea los elementos a la izquierda */
+  gap: 20px; /* Espacio entre el label y el select */
+}
+
+.form-group-modalidad label {
+  font-weight: bold;
+  margin-bottom: 5px;
+  
+}
+
+.form-group-modalidad select {
+  padding: 9px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 12px;
+  margin-top: auto;
+  width: 100%;
+}
+
 .day-button {
   padding: 0.5rem 1rem;
   border: 2px solid #4caf50;
@@ -132,7 +154,7 @@ footer {
   font-size: 11px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
-  margin-bottom: 25px;
+  margin-bottom: 4.5px;
 }
 
 .day-buttons-group {
@@ -225,6 +247,7 @@ footer {
   border: 1px solid #ccc;
   border-radius: 10px;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .map-modal {
@@ -267,8 +290,9 @@ footer {
   font-size: 15px;
   cursor: pointer;
   margin-left: 10px;
-  margin-bottom: -9px;
-  padding: 7.5px 12px;
+  margin-bottom: 0px;
+  border-radius: 6px;
+  padding: 9px 12px;
 }
 
 .suggestions {
@@ -371,8 +395,13 @@ footer {
 .password-container i {
   position: absolute;
   right: 10px;
-  top: 20px;
+  top: 11px;
   cursor: pointer;
+  color: #7c7c7c;
+}
+
+.password-container i:hover {
+  color: #333;
 }
 
 .error-text {
@@ -490,7 +519,7 @@ footer {
   .password-container i {
     position: absolute;
     right: 10px;
-    top: 28px;
+    top: 17px;
     cursor: pointer;
   }
 }
