--- a/frontend/src/css/ResetPassword.css
+++ b/frontend/src/css/ResetPassword.css
@@ -33,20 +33,20 @@
     padding: 30px;
   }
   
-  .form-group {
+  .form-group-reset-password {
     margin-bottom: 20px;
   }
   
-  .form-group label {
+  .form-group-reset-password label {
     display: flex;
     align-items: center;
     gap: 8px;
     margin-bottom: 8px;
     font-weight: 600;
-    color: #392682;
+    color: #6A1B9A;
   }
   
-  .form-group input {
+  .form-group-reset-password input {
     width: 100%;
     padding: 12px;
     border: 1px solid #ddd;
@@ -55,8 +55,8 @@
     transition: all 0.3s ease;
   }
   
-  .form-group input:focus {
-    border-color: #392682;
+  .form-group-reset-password input:focus {
+    border-color : #6c63ff; 
     outline: none;
     box-shadow: 0 0 0 3px rgba(57, 38, 130, 0.2);
   }
