--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -37,6 +37,7 @@ h2 {
 .form-group {
   display: flex;
   flex-direction: column;
+  gap:5px
 }
 
 .form-group label {
@@ -44,12 +45,17 @@ h2 {
   margin-bottom: 5px;
 }
 
-.form-group input,
-.form-group textarea {
+.form-group input {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 12px;
+}
+
+.form-group input:focus {
+  border-color: #4e4ab7;
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(78, 74, 183, 0.2);
 }
 
 .form-group textarea {
@@ -57,7 +63,13 @@ h2 {
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 12px;
-  margin-top: 10px;
+  margin-top: auto;
+}
+
+.form-group textarea:focus {
+  border-color: #4e4ab7;
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(78, 74, 183, 0.2);
 }
 
 .form-group select{
@@ -66,6 +78,12 @@ h2 {
   border-radius: 4px;
   font-size: 12px;
   margin-top: auto;
+}
+
+.form-group select:focus {
+  border-color: #4e4ab7;
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(78, 74, 183, 0.2);
 }
 
 textarea {
