--- a/frontend/src/css/Register.css
+++ b/frontend/src/css/Register.css
@@ -414,6 +414,38 @@
     border-radius: 4px;
     width: 95%;
   }
+
+  .checkbox-register-container {
+    display: flex;
+    justify-content: center; /* centra el contenido dentro del contenedor */
+    align-items: center;
+    grid-column: 1 / -1; /* ocupa las 2 columnas */
+    width: 100%;
+  }  
+  
+  .checkbox-register-label {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    color: #333;
+    gap: 10px;
+    cursor: pointer;
+    white-space: nowrap; /* <- Este es el truco */
+  }
+  
+  .styled-checkbox-register {
+    width: 18px;
+    height: 18px;
+    accent-color: #6a1b9a; /* púrpura agradable */
+    cursor: pointer;
+  }
+  
+  .checkbox-inner-wrapper {
+    max-width: 500px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }  
   
     @media (max-width: 576px) {
         .register-container {
