--- a/frontend/src/css/HeroSection.css
+++ b/frontend/src/css/HeroSection.css
@@ -139,11 +139,15 @@
     font-size: 1.5rem;
     color: var(--primary-color);
   }
+
+  .carousel-control.prev span {
+    margin-left: -2px;
+  }
   
   /* Indicadores del carrusel */
   .carousel-indicators {
     position: absolute;
-    bottom: 20px;
+    bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -176,6 +180,9 @@
     .hero-subtitle {
       font-size: 1.3rem;
     }
+    .carousel-indicators {
+      bottom: 40px;
+    }
   }
   
   @media (max-width: 768px) {
@@ -195,6 +202,9 @@
     .carousel-control {
       width: 40px;
       height: 40px;
+    }
+    .carousel-indicators {
+      bottom: 40px;
     }
   }
   
@@ -243,6 +253,9 @@
     }
     .hero-content {
       margin-right: 30px;
+    }
+    .carousel-indicators {
+      bottom: 40px;
     }
   }
   
